рабочая версия перед переходом на freemaker

--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<div>Hello, {{name}}!</div>
+<div>Hi, {{message}}!</div>
+<div>Hi, {{ip}}!</div>
+<div>Hi, {{user-agent}}!</div>
+
+
+<a href="/main">Main page</a>
 </body>
 </html>
